<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FE Remote</string>

    <!-- Main Activity -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_add_server">Add Server</string>
    <string name="action_settings">Settings</string>
    <string name="no_servers_in_list">No servers found. Add one now!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_server_name">Server Name</string>
    <string name="txt_ip_address">Host</string>
    <string name="txt_hint_address">ip/domain:port</string>
    <string name="txt_ssl">SSL</string>
    <string name="txt_username">Username</string>
    <string name="txt_hint_username">Optional if UUID supplied</string>
    <string name="txt_uuid">UUID</string>
    <string name="txt_hint_uuid">Optional if username supplied</string>
    <string name="txt_token">Token*</string>
    <string name="txt_hint_token">Password also accepted</string>
    <string name="txt_token_warn">*-Token will be saved in clear text if no master password set.</string>
    <string name="txt_auto_connect">Auto Connect</string>
    <string name="txt_default">Default Server</string>
    <string name="txt_timeout">Timeout</string>
    <string name="default_timeout">15000</string>
    <string name="field_required">This field is required.</string>
    <string name="txt_invalid_ip">Invalid IP</string>
    <string name="malformed_qr_code">Malformed qr code. Try again.</string>
    <string name="title_activity_active_server">ActiveServer</string>


    <!-- Active Server Activity -->

    <string name="drawer_server_information">Server Information</string>
    <string name="drawer_player_list">Player List</string>
    <string name="drawer_chat">Chat</string>
    <string name="drawer_console">Console</string>
    <string name="drawer_permissions">Permissions</string>
    <string name="active_player_name">Username</string>
    <string name="active_player_uuid">UUID</string>
    <string name="active_player_health">Health</string>
    <string name="active_player_armor">Armor</string>
    <string name="active_player_hunger">Hunger</string>
    <string name="active_player_saturation">Saturation</string>
    <string name="active_player_location">Location</string>

    <!-- Service -->

    <string name="service_name">FE Background Service</string>
    <string name="connecting">Connecting</string>
    <string name="please_wait_">Please wait…</string>
    <string name="cancel">Cancel</string>
    <string name="connection_refused">Couldn\'t connect: Connection Refused</string>
    <string name="connection_timeout">Couldn\'t connect: Connection Timed out</string>

</resources>
